# sheepdog-ng

./: .gitignore  configure.ac
doc/: livepatch-design.txt  livepatch-howto.txt  livepatch-limit.txt
dog/: Makefile.am  cluster.c  common.c  dog.c  dog.h  livepatch.c  node.c  trace.c  vdi.c
dog/farm/: farm.c  farm.h  object_tree.c
include/: Makefile.am  fec.h  internal_proto.h  list.h  rbtree.h  sheep.h  sheepdog_proto.h  util.h  work.h
lib/: Makefile.am  event.c  fec.c  logger.c  rbtree.c  util.c  work.c
lib/shared/: HOWTO  internal.h  ops.c  sheep.c  sheepdog.h  sheepdog.py  vdi.c
sbd/: sheep.c
sheep/: Makefile.am  cluster.h  config.c  gateway.c  group.c  object_cache.c  object_list_cache.c  ops.c  recovery.c  request.c  sheep.c  sheep_priv.h  vdi.c
sheep/cluster/: corosync.c  local.c  zookeeper.c
sheep/livepatch/: livepatch-patch.h  livepatch.c  livepatch.h  lookup.c  lookup.h  mcount.S
sheep/store/: common.c  md.c  plain_store.c  tree_store.c
sheep/trace/: mcount.S  trace.c  trace.h
sheepfs/: volume.c
tests/functional/: 010  016  029  030  030.out  031  031.out  039.out  041.out  046  046.out  047  048.out  052  052.out  062  062.out  063  064  064.out  076  078  088  088.out  096  099  100  101  101.out  102  102.out  103  103.out  104  104.out  105  105.out  106  106.out  107  (+3 more)
tools/: Makefile.am  zk_control.c
tools/livepatch-build/: create-diff-object.c  livepatch-build  livepatch-patch.h  lookup.c  lookup.h
tools/livepatch-build/insn/: inat.c  insn.c
tools/livepatch-build/insn/asm/: inat.h  insn.h
(+2 files in other folders)
